--- a/scss/pages/product.scss
+++ b/scss/pages/product.scss
@@ -55,9 +55,15 @@ th {
 
 @media (max-width: 768px) {
   .mainProduct {
+    padding: 0px;
     margin: 0px 0px;
     &__title {
       font-size: 30px;
+    }
+    &__table {
+      padding: 3px;
+      width: 90%;
+      height: 90%;
     }
   }
 
@@ -83,6 +89,7 @@ th {
 
     &__table {
       padding: 3px;
+      width: 100%;
     }
   }
 
